--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,16 +1,26 @@
-version: "3.3"
-
+version: '3.3'
 services:
-  prometheus:
-    image: "prom/prometheus"
-    volumes:
-      - "./prometheus.yml:/etc/prometheus/prometheus.yml"
-    ports:
-        - "9090:9090"
-  push-gateway:
-    image: "prom/pushgateway"
-    ports:
-        - "9091:9091"
-  my-test:
-    image: "ubuntu:18.04"
-    command: tail -F anything
+    prometheus:
+        image: prom/prometheus
+        volumes:
+            - './prometheus.yml:/etc/prometheus/prometheus.yml'
+            - 'prometheus_data:/prometheus'
+        ports:
+            - '9090:9090'
+    push-gateway:
+        image: prom/pushgateway
+        ports:
+            - '9091:9091'
+    grafana:
+        image: grafana/grafana
+        environment:
+            - GF_SECURITY_ADMIN_PASSWORD=pass
+        depends_on:
+            - prometheus
+        ports:
+            - '3000:3000'
+        volumes:
+            - 'grafana_data:/var/lib/grafana'
+volumes:
+    prometheus_data: {}
+    grafana_data: {}
